[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureaudit"
version = "1.0.9"
description = "Multi-plugin security audit tool — secrets, CVEs, SAST, malware, CORS, IaC misconfig and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "quaresma870" },
]
keywords = [
    "security", "audit", "secrets-detection", "sast", "vulnerability-scanner",
    "static-analysis", "devsecops", "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "schedule>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/quaresma870/secureaudit"
Repository = "https://github.com/quaresma870/secureaudit"
Issues = "https://github.com/quaresma870/secureaudit/issues"
Changelog = "https://github.com/quaresma870/secureaudit/blob/main/README.md#changelog"

[project.scripts]
secureaudit = "secureaudit.cli:main"

[project.optional-dependencies]
# pip install secureaudit[sast] — adds the semgrep binary for the sast plugin
sast = ["semgrep>=1.45.0"]
# pip install secureaudit[dashboard] — adds the web dashboard (secureaudit serve)
dashboard = ["fastapi>=0.110.0", "uvicorn>=0.27.0"]
# pip install secureaudit[dev] — testing and linting
dev = ["pytest>=8.2.0", "ruff>=0.4.0"]
# pip install secureaudit[all] — everything above
all = ["secureaudit[sast,dashboard,dev]"]

[tool.setuptools.packages.find]
include = ["secureaudit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
commit_parser = "conventional_commits"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
